fixed small mistake

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Lightbox core CSS -->
-    <script src="css/lightbox.css"></script>
+    <link href="css/lightbox.css" rel="stylesheet">
     
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
